<?xml version="1.0"?>
<package format="2">
  <name>mpu6050_driver</name>
  <version>0.0.0</version>
  <description>IMU MPU6050 ROS driver for Raspberry boards</description>

  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <author email="mateusmenezes95@gmail.com">Mateus Menezes</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>i2c_device_ros</depend>
  <!-- <depend>diagnostic_msgs</depend> -->
  <depend>sensor_msgs</depend>

  <build_depend>cmake_modules</build_depend>

</package>
